# Wikipedia-Yofication

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  Dockerfile  Procfile  README.md  Rocket.toml  amvera.yml  app.json  build_script.sh  converter.cpp  create-ruwiki-my.sh  description.md  fly.toml  frequencies.txt  parser.cpp  rsync.sh  string_helper.h  todo.md  u32string.h  update_frequencies_on_github.sh
.circleci/: config.yml
backend/: Cargo.toml  app.json
backend-common/: Cargo.toml
backend-common/src/: hcodes.rs  lib.rs
backend-static/: index.html
backend/src/: continuous_yofication_pages.rs  lib.rs  main.rs  string_utils.rs  yofication.rs
backend/src/dictionary/: mod.rs
backend/src/routes/: mod.rs  wikipedia.rs  wiktionary.rs  yoficate.rs
backend/src/yofication/: tests.rs
backend/static/: index.html
cpp-frequencies/: .gitmodules  BUILD.sh  CMakeLists.txt  build_script.sh  update_frequencies_on_github.sh
cpp-frequencies/nginx/: locations.conf  reload.sh  server.conf
cpp-frequencies/replaces/: README.md
cpp-frequencies/scripts/: all.sh  cmake-init.sh  create-all-ewords.sh  create-all-pages-from-remote.sh  create-all-pages-from-stdin.sh  create-all-pages.sh  create-all-yowords-from-remote.sh  create-all-yowords-from-stdin.sh  create-all-yowords.sh  create-frequencies-from-remote.sh  create-frequencies-from-stdin.sh  create-frequencies.sh  create-replaces-from-remote.sh  create-replaces-from-stdin.sh  create-ruwiki-my.sh  download-pages-articles-bz2-to-stdout.sh  download-ruwiki-my-to-stdout.sh  download-ruwiki-my.sh  grep-different-formats.sh  print-ruwiki-my-from-bz2-file-to-stdout.sh  reclone.sh
cpp-frequencies/src/: all_pages.cpp  all_yowords.cpp  base.h  counter_number_russian_words.h  frequencies.cpp  other.h  replaces_creator.h  replaces_exclusion.h  replaces_printer.cpp  replaces_printer_for_page.cpp  replaces_printer_helper.h  u16string.h  word_info.h  yowords_parser.h
examples/: profile_memory_usage.rs
frequencies/: .gitignore  Cargo.toml  README.md  update_frequencies_on_github.sh
frequencies/src/: frequencies_generator.rs  main.rs  string_utils.rs  wikipedia_dump.rs  yoword_info.rs
frontend/: README.md  package.json  update-script-at-wikipedia.py  webpack.common.js  webpack.prod.js
frontend/src/: backend.js  base.js  constants.js  main.js  settings.js  toast.js
frontend/src/wiktionary/: autocreate_redirect.js
frontend/src/yoficators/: BaseYoficator.js  CodeMirrorYoficator.js  PageYoficator.js  TextAreaYoficator.js  WikiText2017Yoficator.js  WikitextBaseYoficator.js  utility.js
javascript/: eficator.js
nginx/: locations.conf  reload.sh  server.conf
nginx/local/: local.conf
nginx/remote/: locations.conf  reload.sh  server-without-ssl.conf  server.conf
replaces/: 1  2  3  5  6  8  9
replaces/pagesToEfication/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+51 more)
replaces/replacesByTitles/: 1252 год  1272 год  1402 год  1502 год  1570 год  1602 год  1702 год  1870 год  1936 год  1940 год  1945 год  1970 год  1995 год  1999 год  2000 год  Java  Object Pascal  Z3  Азербайджан  Алгебра множеств  Антоник, Владимир Владимирович  Армения  Астана  Бангладеш  Барбадос  Бахрейн  Белиз  Бенин  Болгария  Бразилиа  Брумель, Валерий Николаевич  Бруней  Бутан  Ватикан  Вероятностное пространство  Вероятность  ГУЛАГ  Гамзатов, Расул Гамзатович  Гданьск  Гевелий, Ян  (+72 more)
scripts/: all.sh  cmake-init.sh  create-all-ewords-from-remote.sh  create-all-ewords.sh  create-frequencies-from-remote.sh  create-frequencies.sh  create-replaces-from-remote.sh  create-replaces.sh  create-ruwiki-my.sh  efication.sh  init.sh  reclone.sh  rsync.sh
src/: alignment.h  all_ewords.cpp  clipboard.h  colors.h  converter.cpp  create_frequencies.cpp  create_replaces_for_page.cpp  efication.cpp  ewords_parser.h  frequencies.cpp  interactive_efication.h  interactive_eficator.h  lib.rs  other.h  page.h  parser.cpp  replace_checker.h  replaces_checker.h  replaces_creator.h  replaces_exclusion.h  replaces_printer.cpp  replaces_printer_for_page.cpp  string_helper.h  txt_reader.h  u16string.h  u32string.h  wikipedia_api.h  word_info.h
src/backend/: continuous_yofication_pages.rs  cors.rs  main.rs  mixpanel.rs  words_pages.rs
src/backend/routes/: gramota.rs  mod.rs  wikipedia.rs  wiktionary.rs  yoficate.rs
src/common/: lowercase_first_string.rs  mod.rs  string16_utils.rs  string_utils.rs  words_pages_generator.rs  yoficate_titles.rs
src/common/dictionary/: hcodes.rs  mod.rs  wikipedia.rs  yoword_info.rs
src/frequencies/: frequencies_generator.rs  main.rs  pages_generator.rs  string_utils.rs  wikipedia_dump.rs  words_pages_generator.rs  yoword_info.rs
src/various/: update-github-cache.sh  wikipedia-estimate-size-for-word-pages.rs  wikipedia-print-possible-yowords-to-deyoficate.rs  yoficate-text.rs
statistics/: README.md  plot.sh  plot_frequencies_distribution.py  plot_words_frequencies.py  words.txt
web/: app.py  eficator.js  gunicorn-wikipedia-efication.service  gunicorn.service  yoficator.js
web-backend/: BUILD.sh  Pipfile  Procfile  app.json  app.py  failsafe.py  gunicorn-config.py  gunicorn-wikipedia-efication.service  gunicorn-wikipedia-yofication.service  yoficator.js
web-backend/nginx/: local.conf
web-backend/src/: base.py  hcodes_dictionary.py  helpers.py  minecraft.py  neerc.py  tests.py  wikipedia.py  yofication.py
web-backend/templates/: base.html
web-frontend/: create-script-for-wikipedia.sh  package-lock.json  package.json  update-script-at-wikipedia.py  update-script-at-wikipedia.sh  webpack.config.js  webpack.dev.js  webpack.min.config.js
web-frontend/src/: backend.js  base.js  constants.js  main.js  settings.js  string-helper.js  toast.js  wikipedia-api.js  yofication-edit.js  yofication-page.js  yofication.js
web-wiktionary-script/: autocreate_redirect.js
web/nginx/: local.conf
web/src/: base.py  wikipedia.py  yofication.py
web/templates/: base.html  index.html
(+30 files in other folders)
