[package]
name = "yofication"
version = "0.1.0"
authors = ["Dmitry Murzin <diraria@yandex.ru>"]
edition = "2018"

[profile.dev]
debug = true
[profile.release]
debug = true
[profile.test]
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = true
[profile.release.package."*"]
opt-level = 3
debug = true
[profile.test.package."*"]
opt-level = 3
debug = true

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[[bin]]
name = "frequencies"
path = "src/frequencies/main.rs"

[[bin]]
name = "hcodes-dictionary-additions"
path = "src/various/hcodes-dictionary-additions/main.rs"

[[bin]]
name = "hcodes-dictionary-comparison"
path = "src/various/hcodes-dictionary-comparison/main.rs"

[[bin]]
name = "wikipedia-count-number-hours-to-yoficate-all-articles"
path = "src/various/wikipedia-count-number-hours-to-yoficate-all-articles/main.rs"

[[bin]]
name = "wikipedia-wikificator-additions"
path = "src/various/wikipedia-wikificator-additions/main.rs"

[[bin]]
name = "wikipedia-yoficate-titles"
path = "src/various/wikipedia-yoficate-titles/main.rs"

[[bin]]
name = "wiktionary-yoficate-titles"
path = "src/various/wiktionary-yoficate-titles/main.rs"

[[bin]]
name = "wikipedia-estimate-size-for-word-pages"
path = "src/various/wikipedia-estimate-size-for-word-pages.rs"

[[bin]]
name = "wikipedia-print-possible-yowords-to-deyoficate"
path = "src/various/wikipedia-print-possible-yowords-to-deyoficate.rs"

[dependencies]
base64 = "0.12.0"
bzip2 = "0.3.3"
cookie = "0.13.3"
itertools = "0.9.0"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
rand = "0.7.3"
regex = "1.3.6"
reqwest = { version = "0.10.4", features = ["blocking", "json", "native-tls-vendored"], default-features = false }
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.50"
url = "2.1.1"
