[package]
name = "backend"
version = "0.1.0"
authors = ["Dmitry Murzin <diraria@yandex.ru>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
lazy_static = "1.3.0"
reqwest = "0.9.11"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
base64 = "0.10.1"
itertools = "0.8.0"
backend-common = { path = "../backend-common" }

cookie = "0.11.0"
url = "1.7.2"
regex = "1"
